--- a/app/src/main/res/layout/fragment_bank_mandate.xml
+++ b/app/src/main/res/layout/fragment_bank_mandate.xml
@@ -106,16 +106,16 @@
                     android:id="@+id/btnNext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/space_8"
+                    android:layout_marginBottom="@dimen/space_16"
                     android:background="@drawable/shape_btn_idle_bg"
                     android:fontFamily="@font/lato_bold"
                     android:text="@string/next"
                     android:textColor="@color/white" />
 
                 <Button
-                    android:layout_marginTop="@dimen/space_8"
+                    android:visibility="@{vm.isAddVisible==true?View.VISIBLE:View.GONE}"
                     android:id="@+id/btnAdd"
-                    android:layout_marginBottom="@dimen/space_3"
+                    android:layout_marginBottom="@dimen/space_16"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_btn_idle_bg"
