--- a/app/src/main/res/layout/fragment_bank_mandate_form.xml
+++ b/app/src/main/res/layout/fragment_bank_mandate_form.xml
@@ -22,11 +22,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <WebView
+            <FrameLayout
                 android:layout_above="@id/btnContinue"
-                android:id="@+id/mWebView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent">
+
+                <WebView
+                    android:id="@+id/mWebView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </FrameLayout>
 
             <Button
                 android:layout_alignParentBottom="true"
