--- a/app/src/main/res/layout/fragment_bank_mandate_success.xml
+++ b/app/src/main/res/layout/fragment_bank_mandate_success.xml
@@ -112,7 +112,7 @@
                     android:layout_marginEnd="4dp"
                     android:fontFamily="@font/lato_semibold"
                     android:maxLines="1"
-                    android:text="@{vm.bankMandate.branchBankIdBankName}"
+                    android:text="@{vm.bankName}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/item_selected_color"
                     app:layout_constraintBottom_toBottomOf="@id/ivBank"
@@ -143,7 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="@{vm.bankMandate.accountNumber}"
+                    android:text="@{vm.accountNumber}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/semi_black"
                     app:layout_constraintStart_toStartOf="parent"
