- Cart Checkout Fixes - Bank Mandate Changes

--- a/app/src/main/res/layout/fragment_bank_mandate_form.xml
+++ b/app/src/main/res/layout/fragment_bank_mandate_form.xml
@@ -17,41 +17,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <ScrollView
             android:visibility="@{vm.isIMandate==true?View.VISIBLE:View.GONE}"
+            android:fillViewport="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <FrameLayout
-                android:layout_above="@id/btnContinue"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
-                <WebView
-                    android:id="@+id/mWebView"
+                <FrameLayout
+                    android:id="@+id/lytMandate"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="wrap_content"
+                    tools:ignore="WebViewLayout">
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:attr/progressBarStyleHorizontal"
+                    <WebView
+                        android:minHeight="200dp"
+                        android:id="@+id/mWebView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                    <ProgressBar
+                        android:id="@+id/progressBar"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </FrameLayout>
+
+                <Button
+                    android:layout_below="@id/lytMandate"
+                    android:id="@+id/btnContinue"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </FrameLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/default_space"
+                    android:background="@drawable/shape_btn_idle_bg"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="@string/txtcontinue"
+                    android:textColor="@color/white"
+                    tools:text="@string/add_new_bank_account" />
 
-            <Button
-                android:layout_alignParentBottom="true"
-                android:id="@+id/btnContinue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/default_space"
-                android:background="@drawable/shape_btn_idle_bg"
-                android:fontFamily="@font/lato_bold"
-                android:text="@string/txtcontinue"
-                android:textColor="@color/white"
-                tools:text="@string/add_new_bank_account" />
-
-        </RelativeLayout>
+            </RelativeLayout>
+        </ScrollView>
 
         <android.support.v7.widget.RecyclerView
             android:visibility="@{vm.isIMandate==false?View.VISIBLE:View.GONE}"
