--- a/app/src/main/res/layout/row_cart_item.xml
+++ b/app/src/main/res/layout/row_cart_item.xml
@@ -264,6 +264,7 @@
                 android:imeOptions="actionDone"
                 android:inputType="number"
                 android:maxLines="1"
+                android:text="@={fund.lumpsumAmount}"
                 android:minWidth="100dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/white"
