--- a/app/src/main/res/layout/row_confirm_order.xml
+++ b/app/src/main/res/layout/row_confirm_order.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="widget"
-            type="com.tarrakki.module.confirmorder.Order" />
+            type="com.tarrakki.api.model.ConfirmOrderResponse.Data.OrderLine" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -36,7 +36,7 @@
             android:id="@+id/tvType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{widget.type}"
+            android:text="@{widget.fundIdSchemeType}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,13 +61,13 @@
 
         <TextView
             android:id="@+id/tvSIP"
-            price="@{widget.sipAmount}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
             android:fontFamily="@string/returns_sysmbol"
             android:paddingStart="@dimen/space_4"
             android:paddingEnd="@dimen/space_4"
+            android:text="@{widget.sipAmount}"
             android:textAllCaps="true"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
@@ -142,13 +142,13 @@
 
         <TextView
             android:id="@+id/tvLumpsumAmount"
-            price="@{widget.lumpsumAmount}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
             android:fontFamily="@string/returns_sysmbol"
             android:paddingStart="@dimen/space_4"
             android:paddingEnd="@dimen/space_4"
+            android:text="@{widget.lumpsumAmount}"
             android:textAllCaps="true"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/guideline6"
