--- a/app/src/main/res/drawable/shape_success_bg.xml
+++ b/app/src/main/res/drawable/shape_success_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#fc8c4f" />
+    <solid android:color="#53b963" />
     <corners android:radius="@dimen/default_space" />
 </shape>
