--- a/app/src/main/res/layout/row_bank_mandate_list_item.xml
+++ b/app/src/main/res/layout/row_bank_mandate_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="isSelected"
-            type="Boolean"/>
+            type="Boolean" />
 
         <import type="android.view.View" />
 
@@ -39,31 +39,35 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_8"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/lato_semibold"
             android:maxLines="1"
             android:text="@{widget.bankDetails.bankName}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/item_selected_color"
             app:layout_constraintBottom_toBottomOf="@id/ivBank"
-            app:layout_constraintEnd_toStartOf="@+id/cmDefault"
+            app:layout_constraintEnd_toStartOf="@+id/tvPending"
             app:layout_constraintStart_toEndOf="@id/ivBank"
             app:layout_constraintTop_toTopOf="@id/ivBank"
             tools:text="ICICI Bank" />
 
-        <RadioButton
-            android:clickable="false"
-            android:visibility="gone"
-            android:id="@+id/cmDefault"
+        <TextView
+            android:id="@+id/tvPending"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="@{isSelected}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:maxLines="2"
+            android:paddingStart="@dimen/space_20"
+            android:paddingTop="@dimen/space_6"
+            android:paddingEnd="@dimen/space_20"
+            android:paddingBottom="@dimen/space_6"
+            android:text="@{widget.actualStatus}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
-            android:textSize="@dimen/sp10"
-            app:layout_constraintBottom_toBottomOf="@+id/ivBank"
+            app:layout_constraintBottom_toBottomOf="@id/ivBank"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ivBank" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@id/ivBank"
+            app:layout_constraintTop_toTopOf="@id/ivBank" />
 
         <View
             android:id="@+id/mDivider"
@@ -73,75 +77,136 @@
             android:background="@color/darker_gray"
             app:layout_constraintTop_toBottomOf="@+id/ivBank" />
 
-        <TextView
-            android:id="@+id/tvAccountNoL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
-            android:text="@string/account_number"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mDivider" />
-
-        <TextView
-            android:id="@+id/tvAccountNo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_semibold"
-            android:text="@{widget.bankDetails.accountNumber}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvAccountNoL"
-            tools:text="1210000091052" />
-
-        <TextView
-            android:id="@+id/tvBreachNameL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
-            android:text="@string/breach_name"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintStart_toStartOf="@+id/gdlCenter"
-            app:layout_constraintTop_toBottomOf="@id/mDivider" />
-
-        <TextView
-            android:id="@+id/tvBreachName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_semibold"
-            android:text="@{widget.bankDetails.branchName}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            app:layout_constraintEnd_toStartOf="@+id/tvIFSCCode"
-            app:layout_constraintStart_toStartOf="@id/tvBreachNameL"
-            app:layout_constraintTop_toBottomOf="@+id/tvBreachNameL"
-            tools:text="Ahmedabad" />
-
-        <TextView
-            android:id="@+id/tvIFSCCodeLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
-            android:text="@string/ifsc_code"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        <LinearLayout
+            android:id="@+id/ll_bank_mandate"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintStart_toStartOf="@id/tvIFSCCode"
-            app:layout_constraintTop_toBottomOf="@id/mDivider" />
-
-        <TextView
-            android:id="@+id/tvIFSCCode"
-            android:layout_width="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mDivider"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_semibold"
-            android:minWidth="80dp"
-            android:text="@{widget.bankDetails.ifscCode}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvIFSCCodeLabel"
-            tools:text="IC1C00000457" />
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_weight="0.4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvAccountNoL"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:text="@string/account_number"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
+
+                    <TextView
+                        android:id="@+id/tvAccountNo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lato_semibold"
+                        android:text="@{widget.bankDetails.accountNumber}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/semi_black"
+                        tools:text="1210000091052" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_weight="0.6"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvBreachNameL"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:text="@string/breach_name"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+
+                    <TextView
+                        android:id="@+id/tvBreachName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lato_semibold"
+                        android:text="@{widget.bankDetails.branchName}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/semi_black"
+                        tools:text="Ahmedabad" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_weight="0.4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvIFSCCodeLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:text="@string/ifsc_code"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tvIFSCCode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lato_semibold"
+                        android:minWidth="80dp"
+                        android:text="@{widget.bankDetails.ifscCode}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/semi_black"
+                        tools:text="IC1C00000457" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_weight="0.6"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:text="@string/bank_mandate_type"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+
+                    <TextView
+                        android:id="@+id/tvMandateType"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lato_semibold"
+                        android:minWidth="80dp"
+                        android:text="@{widget.type}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/semi_black"
+                        tools:text="IC1C00000457" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <android.support.constraint.Guideline
             android:id="@+id/gdlCenter"
@@ -156,54 +221,44 @@
             android:layout_height="1dp"
             android:layout_marginTop="@dimen/space_8"
             android:background="@color/darker_gray"
-            app:layout_constraintTop_toBottomOf="@+id/tvBreachName" />
+            app:layout_constraintTop_toBottomOf="@+id/ll_bank_mandate" />
 
         <TextView
             android:id="@+id/tvInfo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="@dimen/space_8"
+            android:layout_marginEnd="8dp"
+            android:text="@{widget.info}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintBottom_toBottomOf="@id/tvPending"
-            app:layout_constraintEnd_toStartOf="@+id/tvPending"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnUploadSanned"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/mDivider2" />
+            app:layout_constraintTop_toTopOf="@id/mDivider2"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/tvPending"
+            android:id="@+id/btnUploadSanned"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
-            android:background="@drawable/shape_pending_bg"
-            android:paddingStart="@dimen/space_25"
+            android:background="@drawable/shape_btn_primary"
+            android:paddingStart="@dimen/space_16"
+            android:paddingEnd="@dimen/space_16"
+            android:fontFamily="@font/lato_bold"
+            android:gravity="center"
+            android:layout_marginBottom="@dimen/space_1"
             android:paddingTop="@dimen/space_8"
-            android:paddingEnd="@dimen/space_25"
+            android:drawableStart="@drawable/ic_mandate_upload"
+            android:drawablePadding="@dimen/space_8"
             android:paddingBottom="@dimen/space_8"
-            android:maxLines="2"
-            android:text="@string/pending"
+            android:text="@string/complete_nach_mandate"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mDivider2" />
-
-        <TextView
-            android:padding="@dimen/space_8"
             android:visibility="@{widget.isMandateUpload==false?View.VISIBLE:View.GONE}"
-            android:id="@+id/btnUploadSanned"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:background="@drawable/shape_btn_idle_bg"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:fontFamily="@font/lato_bold"
-            android:text="@string/upload_scanned_form"
-            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/space_8"
-            app:layout_constraintTop_toBottomOf="@id/tvPending"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/mDivider2" />
 
     </android.support.constraint.ConstraintLayout>
 
