--- a/app/src/main/res/layout/fragment_bank_mandate.xml
+++ b/app/src/main/res/layout/fragment_bank_mandate.xml
@@ -5,128 +5,135 @@
 
     <data>
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
         <variable
             name="vm"
             type="com.tarrakki.module.bankmandate.BankMandateVM" />
     </data>
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/mRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <LinearLayout
-                android:layout_marginBottom="@dimen/space_16"
-                android:visibility="@{vm.isNoBankAccount==true?View.VISIBLE:View.GONE}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_space"
-                android:layout_marginEnd="@dimen/default_space"
-                android:layout_marginTop="@dimen/default_space"
-                android:background="@drawable/shape_cart_view"
-                android:elevation="@dimen/space_2"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:padding="@dimen/space_8">
+                android:orientation="vertical">
 
-                <android.support.v7.widget.CardView
-                    android:id="@+id/view2"
-                    android:layout_width="108dp"
-                    android:layout_height="108dp"
-                    android:elevation="12dp"
-                    app:cardBackgroundColor="@color/circular_bg"
-                    app:cardCornerRadius="54dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_goneMarginTop="@dimen/space_8">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:layout_marginBottom="@dimen/space_16"
+                    android:background="@drawable/shape_cart_view"
+                    android:elevation="@dimen/space_2"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical"
+                    android:padding="@dimen/space_8"
+                    android:visibility="@{vm.isNoBankAccount==true?View.VISIBLE:View.GONE}">
 
-                    <ImageView
-                        android:id="@+id/ivProfile"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:paddingStart="@dimen/default_space"
-                        android:paddingEnd="@dimen/default_space"
-                        android:paddingBottom="@dimen/default_space"
-                        android:src="@drawable/ic_bank" />
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/view2"
+                        android:layout_width="108dp"
+                        android:layout_height="108dp"
+                        android:elevation="12dp"
+                        app:cardBackgroundColor="@color/circular_bg"
+                        app:cardCornerRadius="54dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_goneMarginTop="@dimen/space_8">
+
+                        <ImageView
+                            android:id="@+id/ivProfile"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:paddingStart="@dimen/default_space"
+                            android:paddingEnd="@dimen/default_space"
+                            android:paddingBottom="@dimen/default_space"
+                            android:src="@drawable/ic_bank" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center|bottom"
+                            android:layout_marginTop="@dimen/default_space"
+                            android:layout_marginBottom="@dimen/space_12"
+                            android:text="@string/bank"
+                            android:textAllCaps="true"
+                            android:textColor="@color/black" />
+
+                    </android.support.v7.widget.CardView>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center|bottom"
                         android:layout_marginTop="@dimen/default_space"
-                        android:layout_marginBottom="@dimen/space_12"
-                        android:text="@string/bank"
-                        android:textAllCaps="true"
+                        android:fontFamily="@font/lato_semibold"
+                        android:text="@string/no_bank_account_added_yet"
                         android:textColor="@color/black" />
 
-                </android.support.v7.widget.CardView>
+                </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvBankMandate"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/default_space"
-                    android:fontFamily="@font/lato_semibold"
-                    android:text="@string/no_bank_account_added_yet"
-                    android:textColor="@color/black" />
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"
+                    android:paddingTop="@dimen/default_space"
+                    android:visibility="@{vm.isNoBankAccount==false?View.VISIBLE:View.GONE}"
+                    app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    tools:context=".module.bankmandate.BankMandateFragment"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/row_bank_account_list_item" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btnNext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/space_16"
+                        android:background="@drawable/shape_btn_idle_bg"
+                        android:fontFamily="@font/lato_bold"
+                        android:text="@string/next"
+                        android:textColor="@color/white"
+                        android:visibility="@{vm.isNextVisible==true?View.VISIBLE:View.GONE}" />
+
+                    <Button
+                        android:id="@+id/btnAdd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/space_16"
+                        android:background="@drawable/shape_btn_idle_bg"
+                        android:fontFamily="@font/lato_bold"
+                        android:text="@string/add_new_bank_mandate"
+                        android:textColor="@color/white"
+                        android:visibility="@{vm.isAddVisible==true?View.VISIBLE:View.GONE}" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvBankMandate"
-                android:layout_width="match_parent"
-                android:visibility="@{vm.isNoBankAccount==false?View.VISIBLE:View.GONE}"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:nestedScrollingEnabled="false"
-                android:paddingTop="@dimen/default_space"
-                app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                tools:context=".module.bankmandate.BankMandateFragment"
-                tools:itemCount="2"
-                tools:listitem="@layout/row_bank_account_list_item" />
+        </android.support.v4.widget.NestedScrollView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_space"
-                android:layout_marginEnd="@dimen/default_space"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <Button
-                    android:visibility="@{vm.isNextVisible==true?View.VISIBLE:View.GONE}"
-                    android:id="@+id/btnNext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/space_16"
-                    android:background="@drawable/shape_btn_idle_bg"
-                    android:fontFamily="@font/lato_bold"
-                    android:text="@string/next"
-                    android:textColor="@color/white" />
-
-                <Button
-                    android:visibility="@{vm.isAddVisible==true?View.VISIBLE:View.GONE}"
-                    android:id="@+id/btnAdd"
-                    android:layout_marginBottom="@dimen/space_16"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/shape_btn_idle_bg"
-                    android:fontFamily="@font/lato_bold"
-                    android:text="@string/add_new_bank_mandate"
-                    android:textColor="@color/white" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </layout>
