--- a/app/src/main/res/layout/fragment_add_bank_account.xml
+++ b/app/src/main/res/layout/fragment_add_bank_account.xml
@@ -88,7 +88,7 @@
                 android:layout_marginTop="@dimen/space_4"
                 android:background="@drawable/shape_edt_gray_round"
                 android:hint="@string/account_number"
-                android:inputType="number"
+                android:inputType="numberPassword"
                 android:maxLines="1"
                 android:paddingStart="@dimen/default_space"
                 android:paddingTop="@dimen/space_8"
