--- a/app/src/main/res/layout/fragment_bank_accounts.xml
+++ b/app/src/main/res/layout/fragment_bank_accounts.xml
@@ -10,16 +10,23 @@
             type="com.tarrakki.module.bankaccount.BankAccountsVM" />
     </data>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvBanks"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/mRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingTop="@dimen/default_space"
-        app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:context=".module.bankaccount.BankAccountsFragment"
-        tools:itemCount="5"
-        tools:listitem="@layout/row_bank_account_list_item" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvBanks"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingTop="@dimen/default_space"
+            app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            tools:context=".module.bankaccount.BankAccountsFragment"
+            tools:itemCount="5"
+            tools:listitem="@layout/row_bank_account_list_item" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </layout>
