--- a/app/src/main/res/layout/row_bank_mandate_list_item.xml
+++ b/app/src/main/res/layout/row_bank_mandate_list_item.xml
@@ -57,10 +57,11 @@
             android:layout_height="wrap_content"
             android:maxLines="2"
             android:paddingStart="@dimen/space_20"
-            android:paddingTop="@dimen/space_6"
+            android:paddingTop="@dimen/space_4"
             android:paddingEnd="@dimen/space_20"
-            android:paddingBottom="@dimen/space_6"
+            android:paddingBottom="@dimen/space_4"
             android:text="@{widget.actualStatus}"
+            tools:text="dfjhf"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@id/ivBank"
