--- a/app/src/main/res/layout/row_cart_item.xml
+++ b/app/src/main/res/layout/row_cart_item.xml
@@ -160,6 +160,7 @@
                 android:id="@+id/edtSIPAmount"
                 requestToEdit="@{fund.reuestToEdit}"
                 android:layout_width="0dp"
+                android:paddingEnd="@dimen/space_8"
                 android:layout_height="0dp"
                 android:background="@null"
                 android:fontFamily="@font/lato_semibold"
@@ -265,6 +266,7 @@
                 android:inputType="number"
                 android:maxLines="1"
                 android:text="@={fund.lumpsumAmount}"
+                android:paddingEnd="@dimen/space_8"
                 android:minWidth="100dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/white"
