--- a/app/src/main/res/layout/row_saved_goal_list_item.xml
+++ b/app/src/main/res/layout/row_saved_goal_list_item.xml
@@ -92,6 +92,8 @@
             android:layout_marginTop="@dimen/default_space"
             android:text="@string/amount"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintEnd_toEndOf="@id/gdlCenter"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/mDivider"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -103,6 +105,8 @@
             android:fontFamily="@font/lato_semibold"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
+            app:layout_constraintEnd_toEndOf="@id/gdlCenter"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/mDivider"
             app:layout_constraintTop_toBottomOf="@+id/tvAmountL"
             tools:text="\u20B939.55" />
@@ -129,12 +133,15 @@
             android:id="@+id/tvDurationsL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_space"
             android:text="@string/duration"
+            android:layout_marginStart="@dimen/space_8"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintBaseline_toBaselineOf="@id/tvAmountL"
             app:layout_constraintEnd_toStartOf="@id/tvAddGoal"
-            app:layout_constraintStart_toEndOf="@id/tvAmountL" />
+            app:layout_constraintHorizontal_bias="0.05"
+            app:layout_constraintEnd_toEndOf="@id/tvAddGoal"
+            app:layout_constraintStart_toEndOf="@id/tvAmountL"
+            app:layout_constraintStart_toStartOf="@id/gdlCenter" />
 
         <TextView
             android:id="@+id/tvDurations"
@@ -144,9 +151,18 @@
             android:text='@{goal.n+" Years"}'
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
+            app:layout_constraintEnd_toEndOf="@id/tvAddGoal"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/tvDurationsL"
             app:layout_constraintTop_toBottomOf="@id/tvDurationsL"
             tools:text="5 years" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/gdlCenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.55" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
