--- a/app/src/main/res/layout/row_confirm_order.xml
+++ b/app/src/main/res/layout/row_confirm_order.xml
@@ -8,6 +8,10 @@
         <variable
             name="widget"
             type="com.tarrakki.api.model.ConfirmOrderResponse.Data.OrderLine" />
+
+        <variable
+            name="onCheckedChange"
+            type="android.view.View.OnClickListener" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -53,11 +57,12 @@
             android:paddingTop="@dimen/space_8"
             android:paddingEnd="@dimen/space_16"
             android:paddingBottom="@dimen/space_8"
-            android:text="@string/sip"
+            android:text="@{widget.title}"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
+            app:layout_constraintTop_toBottomOf="@+id/tvName"
+            tools:text="@string/sip" />
 
         <TextView
             android:id="@+id/tvSIP"
@@ -67,7 +72,7 @@
             android:fontFamily="@string/returns_sysmbol"
             android:paddingStart="@dimen/space_4"
             android:paddingEnd="@dimen/space_4"
-            android:text="@{widget.sipAmount}"
+            android:text="@{widget.amount}"
             android:textAllCaps="true"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +87,7 @@
             android:text="@string/start_date_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
+            android:visibility="@{widget.hasSIP}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvSIP"
             tools:text="Start Date:" />
@@ -94,6 +100,7 @@
             android:layout_marginTop="@dimen/space_8"
             android:text="@{widget.startDate}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:visibility="@{widget.hasSIP}"
             app:layout_constraintStart_toEndOf="@id/tvDateL"
             app:layout_constraintTop_toBottomOf="@+id/tvSIP"
             tools:text="30/03/2019" />
@@ -107,10 +114,12 @@
             android:checked="@{widget.firstInstallmentSIP}"
             android:fontFamily="@font/lato_semibold"
             android:gravity="center"
+            android:onClick="@{onCheckedChange}"
             android:padding="@dimen/space_8"
             android:text="@string/first_installment_of_sip_on_toady"
             android:textColor="@color/darker_gray"
             android:textSize="10sp"
+            android:visibility="@{widget.hasSIP}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvDateL"
             tools:checked="true" />
@@ -137,12 +146,13 @@
             android:text="@string/lumpsum"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:visibility="@{widget.haveSIPAndLumpsum}"
             app:layout_constraintStart_toEndOf="@id/guideline6"
             app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
         <TextView
             android:id="@+id/tvLumpsumAmount"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
             android:fontFamily="@string/returns_sysmbol"
@@ -151,6 +161,8 @@
             android:text="@{widget.lumpsumAmount}"
             android:textAllCaps="true"
             android:textColor="@color/black"
+            android:visibility="@{widget.haveSIPAndLumpsum}"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/guideline6"
             app:layout_constraintTop_toBottomOf="@+id/tvSIPLabel"
             tools:text="@string/dummy3" />
@@ -160,6 +172,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/space_8"
             android:background="@color/darker_gray"
+            android:visibility="@{widget.haveSIPAndLumpsum}"
             app:layout_constraintBottom_toBottomOf="@id/cbSIP"
             app:layout_constraintEnd_toStartOf="@id/guideline6"
             app:layout_constraintTop_toTopOf="@id/tvLumpsumLabel" />
