--- a/app/src/main/res/layout/row_saved_goal_list_item.xml
+++ b/app/src/main/res/layout/row_saved_goal_list_item.xml
@@ -100,7 +100,7 @@
         <TextView
             android:id="@+id/tvAmount"
             price="@{goal.fv}"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
