Save KYC data and get KYC data api. Unpaid transaction screen UI.

--- a/app/src/main/res/layout/fragment_transactionsk.xml
+++ b/app/src/main/res/layout/fragment_transactionsk.xml
@@ -16,7 +16,7 @@
             app:tabBackground="@color/colorPrimary"
             app:tabIndicatorColor="@color/item_selected_color"
             app:tabIndicatorHeight="4dp"
-            app:tabMode="fixed"
+            app:tabMode="scrollable"
             app:tabSelectedTextColor="@android:color/white"
             app:tabTextAppearance="@style/tab_text"
             app:tabTextColor="@color/home_title_color" />
