- Payment mode & Confirmation mode UI added

--- a/app/src/main/res/layout/fragment_select_investment_strategies.xml
+++ b/app/src/main/res/layout/fragment_select_investment_strategies.xml
@@ -85,6 +85,7 @@
                     android:drawablePadding="@dimen/space_8"
                     android:fontFamily="@font/lato_semibold"
                     android:text="@{vm.singleInvestmentRiskType}"
+                    android:visibility="@{vm.singleInvestmentRiskTypeVisible}"
                     android:gravity="center_vertical"
                     android:minWidth="120dp"
                     android:padding="@dimen/space_8"
@@ -107,6 +108,7 @@
                     android:gravity="center_vertical"
                     android:minWidth="120dp"
                     android:padding="@dimen/space_8"
+                    android:visibility="@{vm.singleInvestmentReturntypeVisible}"
                     android:text="@{vm.singleInvestmentReturntype}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/pdlg_color_green"
